исправление ошибок